# EduSkillKit

./: .env.example  .gitignore  LICENSE  README.md  dev.bat  dev.sh  pyproject.toml
api/: main.py
api/routes/: chat.py  conversations.py  settings.py  skills.py  upload.py
eduskilk/: __init__.py  __main__.py  config.py  db.py  engine.py  file_parser.py  llm.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  MarkdownRenderer.jsx  Sidebar.jsx
frontend/src/pages/: Guide.jsx  (+5 more)
skills/academic_polish/: SKILL.md
skills/activity_design/: SKILL.md
skills/blackboard_design/: SKILL.md
skills/bloom_classifier/: SKILL.md
skills/class_meeting/: SKILL.md
skills/classroom_interaction/: SKILL.md
skills/classroom_observation/: SKILL.md
skills/concept_map/: SKILL.md
skills/curriculum_ideology/: SKILL.md
skills/differentiated_teaching/: SKILL.md
skills/exam_design/: SKILL.md
skills/feedback_polish/: SKILL.md
skills/formative_assessment/: SKILL.md
skills/layered_homework/: SKILL.md
skills/learning_diagnosis/: SKILL.md
skills/learning_objective/: SKILL.md
skills/lesson_plan/: SKILL.md
skills/microlecture_script/: SKILL.md
skills/model_compare/: SKILL.md
skills/parent_communication/: SKILL.md
skills/research_proposal/: SKILL.md
skills/socratic_question/: SKILL.md
skills/student_comment/: SKILL.md
skills/syllabus_generator/: SKILL.md
skills/syllabus_review/: SKILL.md
skills/teaching_case/: SKILL.md
skills/teaching_reflection/: SKILL.md
(+2 files in other folders)
