[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eduskilk"
version = "0.2.0"
description = "面向教育的 AI 技能工作台 — 让教师创建、分享、复用教学 AI 技能"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
eduskilk = "eduskilk.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["eduskilk", "api"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"
